--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ body {
 .profile-section p {
   text-align: center;
   margin: 0.5rem;
+  animation: fadeIn 1s ease-in-out forwards;
 }
 
 .profile-image {
@@ -40,6 +41,7 @@ body {
   background-color: #3e3e3e;
   display: block;
   margin: 0 auto 1rem auto;
+  animation: fadeIn 1s ease-out forwards;
 }
 
 .title {
@@ -71,6 +73,22 @@ body {
   will-change: transform;
 }
 
+.social-links a[href^="mailto:"] { /* Email Icon */
+  color: #bea215; /* Gmail Red, for example */
+}
+
+.social-links a[href^="tel:"] { /* Phone Icon */
+  color: #34f166; /* Skype Blue, for example */
+}
+
+.social-links a[href*="github.com"] { /* GitHub Icon */
+  color: #949292; /* GitHub Black */
+}
+
+.social-links a[href*="linkedin.com"] { /* LinkedIn Icon */
+  color: #239acd; /* LinkedIn Blue */
+}
+
 .social-links a:hover, .social-links a:focus {
   color: #bb86fc;
   text-decoration: none;
@@ -97,6 +115,14 @@ body {
   border-radius: 5px;
 }
 
+h1, h2 {
+  transition: transform 0.3s ease;
+}
+
+h1:hover, h2:hover {
+  transform: scale(1.013);
+}
+
 h2 {
   color: #bb86fc;
   border-bottom: 2px solid #bb86fc;
@@ -105,4 +131,9 @@ h2 {
 
 h3 {
   color: #adff2f;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
