--- a/src/App.css
+++ b/src/App.css
@@ -73,26 +73,24 @@ body {
   will-change: transform;
 }
 
-.social-links a[href^="mailto:"] { /* Email Icon */
-  color: #bea215; /* Gmail Red, for example */
+.social-links a[href^="mailto:"] {
+  color: #bea215;
 }
 
-.social-links a[href^="tel:"] { /* Phone Icon */
-  color: #34f166; /* Skype Blue, for example */
+.social-links a[href^="tel:"] {
+  color: #2dd058;
 }
 
-.social-links a[href*="github.com"] { /* GitHub Icon */
-  color: #949292; /* GitHub Black */
+.social-links a[href*="github.com"] {
+  color: #949292;
 }
 
-.social-links a[href*="linkedin.com"] { /* LinkedIn Icon */
-  color: #239acd; /* LinkedIn Blue */
+.social-links a[href*="linkedin.com"] {
+  color: #239acd;
 }
 
 .social-links a:hover, .social-links a:focus {
-  color: #bb86fc;
   text-decoration: none;
-  border-color: #bb86fc; 
   transform: scale(1.1);
 }
 
@@ -100,6 +98,38 @@ body {
   margin-bottom: 3rem;
   margin-top: -0.5rem;
 
+}
+
+.company-logo {
+  width: 50px; /* or the size you prefer */
+  height: auto;
+  margin-right: 20px; /* Adjust spacing as necessary */
+  transform: translateY(-95%); /* Moves the logo up by 10% of its height */
+  transition: transform 0.3s ease; /* Optional: Smooth transition for any transform changes */
+}
+
+.job {
+  display: flex;
+  align-items: center; /* Centers logo and job description vertically */
+  margin-bottom: 1rem;
+}
+
+.job h3 {
+  margin-bottom: 0.5rem; /* Reduce the bottom margin of h3 */
+}
+
+.job p {
+  margin-top: 0.5rem; /* Reduce the top margin of the first paragraph */
+  margin-bottom: 0.5rem; /* Reduce the bottom margin if there are consecutive paragraphs */
+}
+
+.job ul {
+  list-style-type: disc; /* Or 'none' if you prefer no bullets */
+  padding-left: 20px; /* Adjust spacing for bullet points */
+}
+
+.job li {
+  margin-bottom: 0.5rem; /* Space between list items */
 }
 
 .skills-list, .projects-list {
